@startuml

title __BALANCE_BINARY_TREE_110's Class Diagram__\n

  namespace cn.shui.order {
    namespace balance_binary_tree_110 {
      class cn.shui.order.balance_binary_tree_110.Solution {
          {static} + main()
          {static} - depth()
          {static} - isBalanced()
      }
    }
  }
  

  namespace cn.shui.order {
    namespace balance_binary_tree_110 {
      class cn.shui.order.balance_binary_tree_110.Solution.TreeNode {
          ~ val : int
          + TreeNode()
      }
    }
  }
  

  cn.shui.order.balance_binary_tree_110.Solution +-down- cn.shui.order.balance_binary_tree_110.Solution.TreeNode
  cn.shui.order.balance_binary_tree_110.Solution.TreeNode o-- cn.shui.order.balance_binary_tree_110.Solution.TreeNode : left
  cn.shui.order.balance_binary_tree_110.Solution.TreeNode o-- cn.shui.order.balance_binary_tree_110.Solution.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
